styels.html/portfolio.css
/* common shared style */
body{
    font-family: 'Open Sans', sans-serif;
}
.text-primary{
    color: #FD6E0A;
}
.btn-primary{
    border-radius: 5px;
    background: #FD6E0A;
    border: 0;
    /* PROBLEM 1 */
    color: white;
    font-size: 20px;
    font-weight: 700;
    padding: 15px 35px;
    
}
#underlink{
    text-decoration: none;
}


/* nav related style */
nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 150px;
}
.nav-title{
    color: #181818;
    font-size: 45px;
    font-weight: 800;
    /* margin-left: 0; */

}
nav > ul{
    display: flex;
    align-items: center;
}
nav li{
    list-style: none;
    margin-right: 50px;
}
nav a{
    text-decoration: none;
    color: #474747;
}
/* header related styles */
.header{
    background-color: #FFF8F3;
    background-image: url('../images/header_bg.png');
    background-repeat: no-repeat;
    background-position: bottom right;
    background-size: 700px 500px;
}
.banar{
    padding: 30px 30px 0px 150px ;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.banar-contant{
    max-width: 500px;
}
.banar .profile{
    width: 500px;
}
.banar-greeting{
    font-size: 30px;
    color: #474747;
    margin-bottom: 0;
}
.banar-title{
    font-size: 50px;
    font-weight: 700;
    margin-top: 5;
    margin-bottom: 15px;
}

/* main section styles */
main{
    max-width: 1140px;
    margin: 0 auto;
    
}
main section{
    margin-top: 130px;
}
.section-title{
    color: #181818;
    text-align: center;
    font-size: 35px;
    font-weight: 700;
}
.section-discription{
    text-align: center;
    color: #757575;
    font-size: 18px;

}


/* about section styles */


.about{
    padding: 130px;
    border-radius: 10px;
    background: #f39c62b4;
    margin: 130px 0px;
}
.about-info-container{
    display: flex;
    justify-content: space-around;
    
}
.about-info{
    text-align: center;
}

/* what i do section  */


#what-i-do-description{
    padding: 30px 150px;
}
.skills-container{
    display: flex;
    gap: 24px;
}
.skill{
    padding: 30px;

    border-radius: 5px;
    background: #FFF;
    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
}
.skill-description{
    color: #757575;
}
/* Resume section */
.resume-colamn-title{
    color: #474747;
    font-size: 30px;
    font-weight: 700;
}

